# biochatter

./: .bumpversion.cfg  .codeclimate.yml  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  BioChatterQuickstart.py  CITATION.cff  CNAME  CONTRIBUTING.md  DEVELOPER.md  LICENSE  NOTICE  RAG_api_tool.txt  README.md  benchmark_data.yaml  benchmark_utils.py  conftest.py  docker-compose.yml  end_to_end_query_generation.csv  end_to_end_query_generation_with_reassurance.csv  generate_root_redirects.py  index.html  milvus-docker-compose.yml  mkdocs.nav.yml  mkdocs.yml  objects.inv  openAIKey.py  pyproject.toml  sitemap.xml  test_biocypher_query_generation.py  versions.json
.cursor/rules/: project-context.mdc  uncertainty-rule.mdc
.devcontainer/: devcontainer.json  post-install.sh
.github/ISSUE_TEMPLATE/: benchmark-model-request.md  bug_report.md
.github/workflows/: benchmark-processing.yml  ci.yaml  ci.yml  docs.yaml  publish.yaml
0.10.0/: 404.html  index.html  sitemap.xml
0.10.0/installation/: index.html
0.10.0/quickstart/: index.html
0.10.0/search/: search_index.json
0.10.0/vignette-kg/: index.html
0.10.1/: 404.html  index.html  objects.inv  sitemap.xml
0.10.1/chat/: index.html
0.11.1/: 404.html  index.html  objects.inv  sitemap.xml
0.12.0/: 404.html  index.html  sitemap.xml
0.13.0/: 404.html  index.html  sitemap.xml
0.13.1/: 404.html  index.html  sitemap.xml
0.13.2/: 404.html  index.html  sitemap.xml
0.13.4/: 404.html  index.html  sitemap.xml
0.13.5/: 404.html  index.html  sitemap.xml
0.14.0/: 404.html  index.html  objects.inv  sitemap.xml
0.14.1/: 404.html  index.html  sitemap.xml
0.9.2/: 404.html  index.html  sitemap.xml
0.9.3/: 404.html  index.html  objects.inv  sitemap.xml
0.9.8/: 404.html  index.html  sitemap.xml
api-docs/: index.html
api-reference/: index.html
benchmark/: Data_Analysis.ipynb  Longevity_Data_Analysis.ipynb  README.md  benchmark_datasets.csv  benchmark_utils.py  conftest.py  create_rag_responses.py  create_responses.py  index.html  load_dataset.py  numericQA.py  test_api_calling.py  test_biocypher_query_generation.py  test_correctness_medical_usecase.py  test_longevity_judge_responses.py  test_longevity_judge_responses_rag.py  test_longevity_judge_responses_rag_simultan.py  test_longevity_judge_responses_simultan.py  test_mcp_edam_qa.py  test_numericQA.py  test_pdsm.py  test_pdsm_regex.py  test_prompts.py  test_rag_interpretation.py  test_text_extraction.py  test_text_image_multimodality.py  test_user_interaction.py  test_vectorstore.py  test_vectorstore_semantic_search.py
benchmark-developer/: index.html
benchmark-results/: index.html
benchmarking/: index.html
biochatter/: _image.py  _misc.py  _stats.py  api_agent.py  constants.py  correction_langgraph_agent.py  database.py  database_agent.py  decider_agent.py  kg_langgraph_agent.py  langgraph_agent_base.py  llm_connect.py  messages.py  podcast.py  prompts.py  query_interaction.py  rag_agent.py  selector_agent.py  utils.py  vectorstore.py  vectorstore_agent.py  vectorstore_host.py
chat/: index.html
docs/: api-reference.md  api.md  benchmark-developer.md  benchmark-overview.md  benchmark-results.md  benchmark.md  benchmarking.md  chat.md  index.md  installation.md  kg-reference.md  kgs.md  llm_connect-reference.md  open-llm.md  podcast-reference.md  podcast.md  prompts-reference.md  quickstart.md  rag.md  reflexion-agent.md  reflexion-reference.md  vectorstore-reference.md  vectorstore_agent-reference.md  vectorstore_host-reference.md  vignette-custom-bclight-advanced.md  vignette-custom-bclight-simple.md  vignette-kg.md  vignette-rag.md  wasm.md
embedders/: generic_openai.py
features/: index.html
installation/: index.html
judgement/: Data_analysis.ipynb  conftest.py  judge_connect.py  judgement_utils.py  test_judgement.py
kg-reference/: index.html
latest/: 404.html  index.html  sitemap.xml
open-llm/: index.html
podcast/: index.html
podcast-reference/: index.html
pole/: .dockerignore  BAK.gitignore  Dockerfile  KG_creation_process.md  README.md  create_knowledge_graph.py  docker-compose-ollama.yml  docker-compose.yml  pyproject.toml  schema_info.yaml
pole/BAK.git/: config  index  packed-refs
pole/BAK.git/logs/: HEAD
pole/BAK.git/objects/pack/: pack-cc5238f226583871d726a806c5cb4a8a4c021962.idx  pack-cc5238f226583871d726a806c5cb4a8a4c021962.pack
pole/BAK.git/refs/heads/: main
pole/config/: biocypher_config.yaml  biocypher_docker_config.yaml  schema_config.yaml
pole/docker/: biocypher_entrypoint_patch.sh  create_table.sh  import.sh
pole/pole/adapters/: pole_adapter.py
pole/scripts/: build.sh  import.sh
quickstart/: index.html
rag/: index.html
reflexion-reference/: index.html
scripts/: _stats.py  add_version_column.py  count_individual_tests.py  generate_root_redirects.py  hooks.py  ollama_conversation.py  plot_gaussian.py  podcast_single_document.py  podcast_single_pdf.py  test.py  update_benchmark_hashes.py  xinference_conversation.py
search/: search_index.json
test/: bc_summary.txt  mock_langchain.py  mock_pymilvus.py  no_podcast.py  test_agent_selector.py  test_api_agent.py  test_api_rag_agent.py  test_benchmark_biocypher_query_generation.py  test_benchmark_vectorstore.py  test_correction_langgraph_agent.py  test_database_agent.py  test_decider_agent.py  test_formatters.py  test_integrated_anndata.py  test_kg_langgraph_agent.py  test_llm_connect.py  test_mock_api_agent.py  test_oncokb.py  test_podcast.py  test_prompts.py  test_pydantic_class_generation.py  test_query_interaction.py  test_rag_agent.py  test_schema_config.yaml  test_schema_info.yaml  test_sequential_agent_fix.py  test_token_counting.py  test_token_extraction.py  test_tool_calling.py  test_tool_collection_from_module.py  test_vectorstore.py  test_vectorstore_agent.py  test_vectorstore_host.py
vectorstore-reference/: index.html
vignette-custom-bclight-advanced/: index.html
vignette-custom-bclight-simple/: index.html
vignette-kg/: index.html
vignette-rag/: index.html
vignettes/: index.html
wasm/: index.html
(+794 files in other folders)
