[project]
name = "biochatter"
version = "0.9.0"
description = "Backend library for conversational AI in biomedicine"
authors = [
    {name = "Sebastian Lobentanzer", email = "sebastian.lobentanzer@gmail.com"},
    {name = "Shaohong Feng", email = "shaohong.feng.78@gmail.com"},
    {name = "Andreas Maier", email = "andreas.maier-1@uni-hamburg.de"}
]
repository = "https://github.com/biocypher/biochatter"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<3.13"
packages = [
    { include = "biochatter" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.urls]
Homepage = "https://biochatter.org"
Documentation = "https://biochatter.org"
Repository = "https://github.com/biocypher/biochatter.git"
Issues = "https://github.com/biocypher/biochatter/issues"

[tool.poetry.group.dev.dependencies]
ruff = "^0.10.0"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
bump2version = "^1.0.1"
pre-commit = "^4.1.0"
mkdocs-table-reader-plugin = "^3.1.0"
scipy = "^1.15.2"
shortuuid = "^1.0.13"
coverage = "^7.6.12"
coverage-badge = "^1.1.2"
mkdocs-redirects = "^1.2.2"
scanpy = "^1.11.0"
mkdocstrings-python = "1.13.0"

[tool.poetry.dependencies]
langchain = "^0.3.20"
openai = "^1.66.3"
httpx = "^0.28.1"
pymupdf = "^1.25.3"
pymilvus = "^2.5.5"
nltk = "^3.9.1"
redis = "^5.2.1"
retry = "^0.9.2"
stringcase = "^1.2.0"
transformers = "^4.49.0"
gtts = {version = "^2.5.4", optional = true}
xinference = {version = "^1.3.1.post1", optional = true}
streamlit = {version = "^1.43.0", optional = true}
rsa = "^4.9"
cryptography = "^44.0.2"
neo4j-utils = "^0.0.12"
seaborn = "^0.13.2"
rouge-score = "^0.1.2"
evaluate = "^0.4.3"
pillow = "^11.1.0"
pdf2image = "^1.17.0"
langchain-community = "^0.3.19"
langgraph = "^0.3.9"
langchain-openai = "^0.3.8"
tiktoken = "^0.9.0"
grandalf = "^0.8"
importlib-metadata = "^8.6.1"
colorcet = "^3.1.0"
langchain-anthropic = "^0.3.9"
anthropic = "^0.49.0"
docstring-parser = "^0.16"
langchain-google-genai = "^2.1.0"


[tool.poetry.extras]
podcast = ["gtts"]
xinference = ["xinference"]
streamlit = ["streamlit"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "COM812", "ISC001"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 80

[tool.ruff.lint.per-file-ignores]
"test/*" = ["ANN001", "ANN201", "D100", "D101", "D102", "D103", "D104", "I001", "S101"]
"benchmark/*" = ["ANN001", "ANN201", "D100", "D101", "D102", "D103", "D104", "I001", "S101"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false