[tool.poetry]
name = "biochatter"
version = "0.9.0"
description = "Backend library for conversational AI in biomedicine"
authors = [
    "Sebastian Lobentanzer <sebastian.lobentanzer@gmail.com>",
    "Shaohong Feng <shaohong.feng.78@gmail.com>",
    "Andreas Maier <andreas.maier-1@uni-hamburg.de"
]
repository = "https://github.com/biocypher/biochatter"
license = "MIT"
readme = "README.md"
packages = [
    { include = "biochatter" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.urls]
Homepage = "https://biochatter.org"
Documentation = "https://biochatter.org"
Repository = "https://github.com/biocypher/biochatter.git"
Issues = "https://github.com/biocypher/biochatter/issues"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "^0.2.5"
openai = "^1.1.0"
httpx = "0.27.2"
pymupdf = "^1.22.3"
pymilvus = ">=2.2.8"
nltk = "^3.8.1"
redis = "^4.5.5"
retry = "^0.9.2"
stringcase = "^1.2.0"
transformers = "^4.30.2"
streamlit = { version = "^1.23.1", optional = true }
gTTS = { version = "^2.3.2", optional = true }
xinference = { version = "^0.14.1", optional = true }
rsa = "^4.9"
cryptography = "^41.0.7"
neo4j-utils = "^0.0.7"
seaborn = "^0.13.2"
rouge_score = "0.1.2"
evaluate = "^0.4.1"
pillow = ">=10.2,<11.0"
pdf2image = "^1.16.0"
langchain-community = "^0.2.5"
langgraph = "^0.1.5"
langchain-openai = "^0.1.14"
tiktoken = "0.7.0"
grandalf = "^0.8"
importlib-metadata = "^8.0.0"
colorcet = "^3.1.0"
langchain-anthropic = "^0.1.22"
anthropic = "^0.33.0"
docstring-parser = "^0.16"

[tool.poetry.extras]
streamlit = ["streamlit"]
podcast = ["gTTS"]
xinference = ["xinference"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^6.0.0"
bump2version = "^1.0.1"
mkdocs-material = {extras = ["imaging"], version = "^9.5.10"}
pre-commit = ">=2.17.0"
mkdocs-table-reader-plugin = "^2.0.3"
scipy = "^1.12.0"
shortuuid = "^1.0.13"
coverage = "^7.6.0"
coverage-badge = "^1.1.1"

mkdocs-redirects = "^1.2.1"
scanpy = "^1.10.4"
mkdocstrings = {version = ">=0.24.0", extras = ["python"]}
mkdocstrings-python = "1.13.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "COM812", "ISC001"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 80

[tool.ruff.lint.per-file-ignores]
"test/*" = ["ANN001", "ANN201", "D100", "D101", "D102", "D103", "D104", "I001", "S101"]
"benchmark/*" = ["ANN001", "ANN201", "D100", "D101", "D102", "D103", "D104", "I001", "S101"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
