[project]
name = "biochatter"
version = "0.11.0"
description = "Backend library for conversational AI in biomedicine"
authors = [
    {name = "Sebastian Lobentanzer", email = "sebastian.lobentanzer@gmail.com"},
    {name = "Shaohong Feng", email = "shaohong.feng.78@gmail.com"},
    {name = "Andreas Maier", email = "andreas.maier-1@uni-hamburg.de"}
]
repository = "https://github.com/biocypher/biochatter"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.13"
packages = [
    { include = "biochatter" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dynamic = ["dependencies"]

[tool.poetry.dependencies]
langchain = ">=0.3.20,<0.4.0"
openai = ">=1.66.3,<2.0.0"
httpx = ">=0.28.1,<0.29.0"
pymupdf = ">=1.25.4,<2.0.0"
pymilvus = ">=2.5.5,<3.0.0"
nltk = ">=3.9.1,<4.0.0"
redis = ">=5.2.1,<6.0.0"
retry = ">=0.9.2,<0.10.1"
stringcase = ">=1.2.0,<2.0.0"
transformers = ">=4.49.0,<5.0.0"
rsa = ">=4.9,<5.0"
cryptography = ">=44.0.2,<45.0.0"
neo4j-utils = ">=0.0.12,<0.0.13"
seaborn = ">=0.13.2,<0.14.0"
rouge-score = ">=0.1.2,<0.2.0"
evaluate = ">=0.4.3,<0.5.0"
pillow = "==10.4.0"
pdf2image = ">=1.17.0,<2.0.0"
langchain-community = ">=0.3.19,<0.4.0"
langgraph = ">=0.3.11,<0.4.0"
langchain-openai = ">=0.3.8,<0.4.0"
tiktoken = ">=0.9.0,<0.10.1"
grandalf = ">=0.8,<0.9"
importlib-metadata = ">=8.6.1,<9.0.0"
colorcet = ">=3.1.0,<4.0.0"
langchain-anthropic = ">=0.3.10,<0.4.0"
anthropic = ">=0.49.0,<0.50.0"
docstring-parser = ">=0.16,<0.17"
langchain-google-genai = ">=2.1.0,<3.0.0"
litellm = ">=1.68.2,<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
bump2version = "^1.0.1"
mkdocs-material = {extras = ["imaging"], version = "^9.6.11"}
pre-commit = "^4.1.0"
mkdocs-table-reader-plugin = "^3.1.0"
scipy = "^1.15.2"
shortuuid = "^1.0.13"
coverage = "^7.7.0"
coverage-badge = "^1.1.2"
mkdocs-redirects = "^1.2.2"
scanpy = "^1.11.0"
mkdocstrings = "^0.29.0"
mkdocstrings-python = "^1.16.5"
cairosvg = "^2.7.1"
ruff = "^0.11.8"
mike = "^2.1.3"

[tool.poetry.group.examples.dependencies]
gseapy = "^1.1.8"

[tool.poetry.group.mcp.dependencies]
fastmcp = "^0.4.1"
langchain-mcp-adapters = "^0.1.0"

[tool.poetry.group.xinference.dependencies]
xinference = "==1.6.0.post1"

[tool.poetry.group.podcast.dependencies]
gtts = "*"

[tool.poetry.group.streamlit.dependencies]
streamlit = "*"

[project.urls]
Homepage = "https://biochatter.org"
Documentation = "https://biochatter.org"
Repository = "https://github.com/biocypher/biochatter.git"
Issues = "https://github.com/biocypher/biochatter/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "COM812", "ISC001"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 80

[tool.ruff.lint.per-file-ignores]
"test/*" = ["ANN001", "ANN201", "D100", "D101", "D102", "D103", "D104", "I001", "S101"]
"benchmark/*" = ["ANN001", "ANN201", "D100", "D101", "D102", "D103", "D104", "I001", "S101"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:builtins:",
    "ignore::DeprecationWarning:swigvarlink:",
    "ignore::DeprecationWarning:",
    "ignore::UserWarning:"
]
addopts = "-p no:warnings"
testpaths = ["test", "benchmark"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false